checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000143187.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#42: 
> drivers/pci/intr_remapping.c:680:28: error: macro "if" passed 2 arguments, but takes just 1

ERROR:SPACING: spaces required around that '=' (ctx:VxV)
#78: FILE: include/linux/dmar.h:50:
+		if (({i=drhd->iommu, drhd->ignored;})) {} else
 		       ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space required after that ';' (ctx:VxV)
#78: FILE: include/linux/dmar.h:50:
+		if (({i=drhd->iommu, drhd->ignored;})) {} else
 		                                  ^

ERROR:ASSIGN_IN_IF: do not use assignment in if condition
#78: FILE: include/linux/dmar.h:50:
+		if (({i=drhd->iommu, drhd->ignored;})) {} else

Do not use assignments in if condition.
Example::

  if ((foo = bar(...)) < BAZ) {

should be written as::

  foo = bar(...);
  if (foo < BAZ) {

ERROR:TRAILING_STATEMENTS: trailing statements should be on next line
#78: FILE: include/linux/dmar.h:50:
+		if (({i=drhd->iommu, drhd->ignored;})) {} else

Trailing statements (for example after any conditional) should be
on the next line.
Statements, such as::

  if (x == y) break;

should be::

  if (x == y)
          break;

CHECK:BRACES: braces {} should be used on all arms of this statement
#78: FILE: include/linux/dmar.h:50:
+		if (({i=drhd->iommu, drhd->ignored;})) {} else
[...]
+		if (({i=drhd->iommu, drhd->ignored;})) {} else
[...]

The placement of braces is stylistically incorrect.
The preferred way is to put the opening brace last on the line,
and put the closing brace first::

  if (x is true) {
          we do y
  }

This applies for all non-functional blocks.
However, there is one special case, namely functions: they have the
opening brace at the beginning of the next line, thus::

  int function(int x)
  {
          body of function
  }

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#placing-braces-and-spaces

ERROR:SPACING: spaces required around that '=' (ctx:VxV)
#83: FILE: include/linux/dmar.h:54:
+		if (({ i=drhd->iommu, 0;})) {} else
 		        ^

ERROR:SPACING: space required after that ';' (ctx:VxV)
#83: FILE: include/linux/dmar.h:54:
+		if (({ i=drhd->iommu, 0;})) {} else
 		                       ^

ERROR:ASSIGN_IN_IF: do not use assignment in if condition
#83: FILE: include/linux/dmar.h:54:
+		if (({ i=drhd->iommu, 0;})) {} else

ERROR:TRAILING_STATEMENTS: trailing statements should be on next line
#83: FILE: include/linux/dmar.h:54:
+		if (({ i=drhd->iommu, 0;})) {} else

WARNING:BRACES: braces {} are not necessary for any arm of this statement
#83: FILE: include/linux/dmar.h:54:
+		if (({ i=drhd->iommu, 0;})) {} else
[...]
+		if (({ i=drhd->iommu, 0;})) {} else
[...]

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000143187.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 8 errors, 2 warnings, 1 checks, 13 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000143187.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
